Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-32751

sensor fw backend wrongly calculates force of gravity

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.2.0
    • 5.1.0
    • Sensors
    • None
    • I65076fa41d5c6a4e716df96bc5156068c1bd0040

    Description

      sensorfw accel backend wrongly calculates gravity as 9.812865328,
      whereas the standard is 9.80665

      As linked in the source:
      http://en.wikipedia.org/wiki/Standard_gravity
      (old code wrongly states wikipedia states it is 9.812865328)

      This calculation is needed as accel data within sensorfw is handled as milli-G's (probably so it can use int and not deal with floats), and QSensors and the standard measurements are m/s^2

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lpotter Lorn Potter
            lpotter Lorn Potter
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes