use 9.80665 as standard gravity for calculations.

Task-number: QTBUG-32751

Change-Id: I65076fa41d5c6a4e716df96bc5156068c1bd0040
Reviewed-by: Alex Blasche <alexander.blasche@digia.com>
Reviewed-by: Thomas McGuire <thomas.mcguire@kdab.com>